# Zayfer_Vault

./: .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  INSTALL.md  LICENSE  README.md  deny.toml  pyproject.toml  run.sh
.cargo/: audit.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  platform_server.rs
crates/core/: Cargo.toml
crates/core/benches/: crypto_benches.rs
crates/core/src/: aead.rs  aes_gcm.rs  audit.rs  backup.rs  chacha20.rs  compression.rs  config.rs  ed25519.rs  error.rs  format.rs  kdf.rs  keystore.rs  lib.rs  openpgp.rs  passgen.rs  platform.rs  qr.rs  rsa.rs  secure_mem.rs  services.rs  shamir.rs  shred.rs  stego.rs  x25519.rs
crates/core/src/keystore/: format.rs  mod.rs  types.rs
crates/core/tests/: integration.rs  property.rs
crates/python/: Cargo.toml
crates/python/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: ARCHITECTURE.md  CLI.md  CONTRIBUTING.md  HBZF_FORMAT.md  MAINTENANCE.md  PYTHON_API.md  QUICKSTART.md  README.md  RUST_API.md  SECURE_COMMUNICATIONS.md  SECURITY.md  TECHNICAL_REFERENCE.md  TUTORIAL_ENCRYPTION_PASSWORDS.md  USER_GUIDE.md  WEB_GUI.md
docs/archive/refactoring/: ARCHIVED.md  BREAKING_CHANGES.md  MIGRATION_GUIDE.md  REFACTORING_PLAN.md
docs/guides/: MAINTENANCE.md  QUICKSTART.md  README.md  SECURE_COMMUNICATIONS.md  TUTORIAL_ENCRYPTION_PASSWORDS.md  USER_GUIDE.md  WEB_GUI.md
docs/project/: ARCHITECTURE.md  CONTRIBUTING.md  README.md
docs/refactoring/: PROGRESS.md  README.md  SUMMARY.md
docs/reference/: CLI.md  HBZF_FORMAT.md  PYTHON_API.md  README.md  RUST_API.md  SECURITY.md  TECHNICAL_REFERENCE.md
python/hb_zayfer/: __init__.py  _native.pyi  cli.py  services.py
python/hb_zayfer/gui/: __init__.py  __main__.py  about_dialog.py  app.py  audit_utils.py  audit_view.py  backup_view.py  base_view.py  clipboard.py  contacts_view.py  decrypt_view.py  dragdrop.py  encrypt_view.py  home_view.py  keygen_view.py  keyring_view.py  main_window.py  messaging_utils.py  messaging_view.py  notifications.py  passgen_view.py  password_strength.py  qr_view.py  settings_manager.py  settings_view.py  shortcuts_dialog.py  sign_view.py  statusbar.py  theme.py  verify_view.py  workers.py
python/hb_zayfer/web/: __init__.py  app.py  routes.py
python/hb_zayfer/web/static/: app.js  index.html  style.css
scripts/: build-wasm.sh  package.sh
tests/python/: test_crypto.py  test_gui_password_strength.py  test_gui_shortcuts_dialog.py  test_messaging_utils.py  test_services.py  test_web.py
