[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "hb_zayfer"
version = "1.1.1"
description = "Zayfer Vault — a full-featured encryption and secure communications suite with GUI, CLI, and web interfaces"
license = { text = "MIT" }
authors = [{name = "James Temple", email = "james@honey-badger.org"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
]

[project.optional-dependencies]
gui = ["PySide6>=6.5"]
web = ["fastapi>=0.100", "uvicorn[standard]>=0.20", "python-multipart>=0.0.6"]
cli = ["click>=8.0", "rich>=13.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-qt>=4.2", "httpx>=0.24"]
all = ["hb_zayfer[gui,web,cli,dev]"]

[project.scripts]
hb-zayfer = "hb_zayfer.cli:main"
hb-zayfer-gui = "hb_zayfer.gui.app:main"
hb-zayfer-web = "hb_zayfer.web:main"

[tool.maturin]
manifest-path = "crates/python/Cargo.toml"
python-source = "python"
module-name = "hb_zayfer._native"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["target", ".venv", "build", "dist", "python/hb_zayfer/_native.pyi"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line length is enforced by formatter
    "B008",  # function calls in argument defaults (common in PySide6)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
"python/hb_zayfer/gui/**" = ["B007"]  # unused loop variables in Qt patterns

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["python/hb_zayfer"]
exclude = ["python/hb_zayfer/web", "python/hb_zayfer/gui"]  # GUI/web have heavy Qt/FastAPI dynamic typing

[[tool.mypy.overrides]]
module = "hb_zayfer._native"
ignore_errors = true
