[package]
name = "hb_zayfer_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI binary for HB_Zayfer encryption suite"

[[bin]]
name = "hb-zayfer"
path = "src/main.rs"

[dependencies]
hb_zayfer_core = { path = "../core" }
clap.workspace = true
clap_complete = "4"
anyhow.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
hex.workspace = true
rand.workspace = true
rand_core.workspace = true
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.5", features = ["fs"] }
chrono = { workspace = true }
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
