[package]
name = "hb_zayfer_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core cryptographic library for HB_Zayfer encryption suite"

[dependencies]
# Crypto
rsa.workspace = true
signature.workspace = true
aead = "0.5"
aes-gcm.workspace = true
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
hkdf.workspace = true
hmac = "0.12"
sha2.workspace = true
argon2.workspace = true
scrypt.workspace = true
sequoia-openpgp.workspace = true

# Key formats
pkcs8.workspace = true
pkcs1.workspace = true

# Security
zeroize.workspace = true
rand.workspace = true
rand_core.workspace = true
subtle.workspace = true
percent-encoding.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Serialization
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
hex.workspace = true

# Utilities
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
dirs.workspace = true
toml.workspace = true
flate2 = "1"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
proptest = "1"

[[bench]]
name = "crypto_benches"
harness = false

[lints]
workspace = true
