[package]
name = "hb_zayfer_wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WebAssembly bindings for HB_Zayfer cryptographic operations"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# We re-implement a minimal crypto surface for WASM rather than pulling
# the full core crate (which depends on sequoia-openpgp / system libs).
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]
